Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/Integration_Onboarding_Pipeline__c.object-meta.xml
<CustomObject>
    <description>Record of all our integration/onboarding processes and activities</description>
    <label>Ingestion/Onboarding</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Ingestion/Onboarding Document ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ingestion/Onboarding</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>