Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/fields/All_changed_done_in_UI__c.field-meta.xml
<CustomField>
    <fullName>All_changed_done_in_UI__c</fullName>
    <inlineHelpText>All changes done in Eyeota system including mappings update and deletions.</inlineHelpText>
    <label>All changes done in UI</label>
    <type>Date</type>
</CustomField>