Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/fields/AOL_Video_Ingested__c.field-meta.xml
<CustomField>
    <fullName>AOL_Video_Ingested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AOL Video Ingested</label>
    <type>Checkbox</type>
</CustomField>