Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/fields/Data_File_Process_Requested__c.field-meta.xml
<CustomField>
    <fullName>Data_File_Process_Requested__c</fullName>
    <label>Data File Process Requested</label>
    <type>Date</type>
</CustomField>