Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/fields/Data_Files_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Data_Files_Uploaded__c</fullName>
    <label>Data Files Uploaded by CTO</label>
    <type>Date</type>
</CustomField>