Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/fields/GDPR_Compliance_Verified__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Compliance_Verified__c</fullName>
    <inlineHelpText>Please use the guidelines found here (https://docs.google.com/document/d/1WTXUgxbktxBJnR-80o0Ma6zQZoz190AgUCqR_Qnu97s/edit?usp=sharing) to check GDPR Compliance.</inlineHelpText>
    <label>GDPR Compliance Verified</label>
    <type>Date</type>
</CustomField>