Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/fields/How_are_segments_verified__c.field-meta.xml
<CustomField>
    <fullName>How_are_segments_verified__c</fullName>
    <inlineHelpText>How are segments verified? How often are they verified? Is it verified in conjunction with another company?</inlineHelpText>
    <label>How are segments verified</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>