Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/fields/Inclusion_List_GlobalList__c.field-meta.xml
<CustomField>
    <fullName>Inclusion_List_GlobalList__c</fullName>
    <label>Inclusion List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Platforms_Used</valueSetName>
    </valueSet>
</CustomField>