Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logo</label>
    <type>Checkbox</type>
</CustomField>