Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/fields/Mapping_Completed_in_Eyeota_System__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Completed_in_Eyeota_System__c</fullName>
    <label>Mapping Completed in Eyeota System</label>
    <type>Date</type>
</CustomField>