Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/fields/Marketing_Brief_Completed__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Brief_Completed__c</fullName>
    <label>Marketing Brief Completed</label>
    <type>Date</type>
</CustomField>