Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/fields/Marketing_required__c.field-meta.xml
<CustomField>
    <fullName>Marketing_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing required?</label>
    <type>Checkbox</type>
</CustomField>