Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/fields/Neustar_Aggregate_Knowledge_Ingested__c.field-meta.xml
<CustomField>
    <fullName>Neustar_Aggregate_Knowledge_Ingested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Neustar (Aggregate Knowledge) Ingested</label>
    <type>Checkbox</type>
</CustomField>