Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/fields/Partner_s_Deck__c.field-meta.xml
<CustomField>
    <fullName>Partner_s_Deck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner&apos;s Deck</label>
    <type>Checkbox</type>
</CustomField>