Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/fields/Press_Release_Status__c.field-meta.xml
<CustomField>
    <fullName>Press_Release_Status__c</fullName>
    <label>Press Release Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_Status</valueSetName>
    </valueSet>
</CustomField>