Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/fields/QN_Monthly_mobile_app_UUs__c.field-meta.xml
<CustomField>
    <fullName>QN_Monthly_mobile_app_UUs__c</fullName>
    <formula>Data_Supplier_Account__r.Parent.Monthly_mobile_app_UUs__c</formula>
    <label>Monthly mobile app UUs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>