Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/fields/QN_Pixel_Syncs__c.field-meta.xml
<CustomField>
    <fullName>QN_Pixel_Syncs__c</fullName>
    <formula>Data_Supplier_Account__r.Parent.Pixel_Syncs__c</formula>
    <label>Pixel Syncs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>