Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/fields/RadiumOne_Ingested__c.field-meta.xml
<CustomField>
    <fullName>RadiumOne_Ingested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RadiumOne Ingested</label>
    <type>Checkbox</type>
</CustomField>