Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/fields/Segment_Available_in_DSPs_DMPs__c.field-meta.xml
<CustomField>
    <fullName>Segment_Available_in_DSPs_DMPs__c</fullName>
    <label>Segment Available in DSPs/DMPs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Quarters</valueSetName>
    </valueSet>
</CustomField>