Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/fields/Segment_Update_Type__c.field-meta.xml
<CustomField>
    <fullName>Segment_Update_Type__c</fullName>
    <label>Segment Update Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Segment Name</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Description</fullName>
            </value>
            <value>
                <fullName>Lifetime</fullName>
            </value>
            <value>
                <fullName>Mapping Values</fullName>
            </value>
            <value>
                <fullName>Segment Deletion</fullName>
            </value>
            <value>
                <fullName>Termination of Account</fullName>
            </value>
            <value>
                <fullName>Low/ No Revenue</fullName>
            </value>
            <value>
                <fullName>Product Removal</fullName>
            </value>
            <value>
                <fullName>Market Deletion</fullName>
            </value>
            <value>
                <fullName>Privacy/ Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>