Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/fields/Setup_Completed_in_Eyeota_UI__c.field-meta.xml
<CustomField>
    <fullName>Setup_Completed_in_Eyeota_UI__c</fullName>
    <description>Condense from:
-Segments Created in Eyeota System
-Mapping Completed in Eyeota System and
-Campaign Created in Eyeota Ecosystem</description>
    <inlineHelpText>Segments created, mappings completed and campaigns created in Eyeota system.</inlineHelpText>
    <label>Setup Completed in Eyeota UI</label>
    <type>Date</type>
</CustomField>