Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/fields/Stage_1__c.field-meta.xml
<CustomField>
    <fullName>Stage_1__c</fullName>
    <defaultValue>&quot;Data Prep&quot;</defaultValue>
    <label>Stage 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>