Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/fields/Taboola_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Taboola_Upload_Date__c</fullName>
    <label>Taboola Upload Date</label>
    <type>Date</type>
</CustomField>