Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/recordTypes/General_Onboarding_Integration.recordType-meta.xml
<RecordType>
    <fullName>General_Onboarding_Integration</fullName>
    <active>true</active>
    <description>Usable for any integration/onboarding type</description>
    <label>General Ingestion/Onboarding</label>
</RecordType>