Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/recordTypes/Offline_via_3rd_Party_Onboarder_Unbranded.recordType-meta.xml
<RecordType>
    <fullName>Offline_via_3rd_Party_Onboarder_Unbranded</fullName>
    <active>false</active>
    <label>Offline via 3rd Party Onboarder (Unbranded)</label>
</RecordType>