Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/recordTypes/Offline_via_Geo_Location_Branded_NEW_SEGMENTS.recordType-meta.xml
<RecordType>
    <fullName>Offline_via_Geo_Location_Branded_NEW_SEGMENTS</fullName>
    <active>false</active>
    <label>Offline via Geo Location/Geo Location &amp; Sociodemographic (Branded) - NEW/REFRESH</label>
</RecordType>