Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/recordTypes/Offline_via_S2S_and_Modellng_Branded.recordType-meta.xml
<RecordType>
    <fullName>Offline_via_S2S_and_Modellng_Branded</fullName>
    <active>false</active>
    <description>For branded online onboarding via S2S and Modelling</description>
    <label>Online via S2S Ingestion and Modellng (Branded)</label>
</RecordType>