Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/recordTypes/Online_via_Pixel_Branded.recordType-meta.xml
<RecordType>
    <fullName>Online_via_Pixel_Branded</fullName>
    <active>false</active>
    <description>For branded online integration via Pixel</description>
    <label>Online via Pixel (Branded)</label>
</RecordType>