Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/recordTypes/Online_via_S2S_Branded.recordType-meta.xml
<RecordType>
    <fullName>Online_via_S2S_Branded</fullName>
    <active>false</active>
    <description>For branded online integration via S2S</description>
    <label>Online via S2S (Branded)</label>
</RecordType>