Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/recordTypes/Online_via_S2S_Unbranded.recordType-meta.xml
<RecordType>
    <fullName>Online_via_S2S_Unbranded</fullName>
    <active>false</active>
    <description>For unbranded integration via S2S</description>
    <label>Online via S2S (Unbranded)</label>
</RecordType>