Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/recordTypes/Segment_Updates.recordType-meta.xml
<RecordType>
    <fullName>Segment_Updates</fullName>
    <active>false</active>
    <description>For Segment Name, Pricing, Description, Lifetime and Mapping updates, and Segment Deletions</description>
    <label>Segment Updates</label>
</RecordType>