Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/validationRules/Appier_excluded.validationRule-meta.xml
<ValidationRule>
    <fullName>Appier_excluded</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(INCLUDES(Inclusion_List_GlobalList__c,&apos;Appier&apos;)),NOT(ISBLANK( Appier_Upload_Date__c )))</errorConditionFormula>
    <errorDisplayField>Appier_Upload_Date__c</errorDisplayField>
    <errorMessage>Appier is not in the Inclusion List.</errorMessage>
</ValidationRule>