Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/validationRules/DBM_Excluded.validationRule-meta.xml
<ValidationRule>
    <fullName>DBM_Excluded</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(INCLUDES(Inclusion_List_GlobalList__c,&apos;Google&apos;)),NOT(ISBLANK( DBM_Upload_Date__c )))</errorConditionFormula>
    <errorDisplayField>DBM_Upload_Date__c</errorDisplayField>
    <errorMessage>Google is not in the Inclusion List.</errorMessage>
</ValidationRule>