Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/validationRules/Email_Alert_for_NonCompliance.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Alert_for_NonCompliance</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNULL( Reason_for_non_compliance__c ), (Send_Email_Alert_for_Non_Compliance__c = TRUE))</errorConditionFormula>
    <errorDisplayField>Send_Email_Alert_for_Non_Compliance__c</errorDisplayField>
    <errorMessage>Please fill in the &quot;Reason for Non-Compliance&quot; field.</errorMessage>
</ValidationRule>