Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/validationRules/MediaiQ_excluded.validationRule-meta.xml
<ValidationRule>
    <fullName>MediaiQ_excluded</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(INCLUDES(Inclusion_List_GlobalList__c,&apos;Media iQ Digital&apos;)),NOT(ISBLANK( Media_iQ_Digital_Upload_Date__c )))</errorConditionFormula>
    <errorDisplayField>Media_iQ_Digital_Upload_Date__c</errorDisplayField>
    <errorMessage>Media iQ Digital is not in the Inclusion List.</errorMessage>
</ValidationRule>