Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/validationRules/Segment_Update_No_Deletion.validationRule-meta.xml
<ValidationRule>
    <fullName>Segment_Update_No_Deletion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Type__c)=&quot;Segment Update&quot;  ,INCLUDES(Segment_Update_Type__c,&apos;Segment Deletion&apos;))</errorConditionFormula>
    <errorMessage>Please submit a Deletion Request.</errorMessage>
</ValidationRule>