Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/validationRules/Taboola_excluded.validationRule-meta.xml
<ValidationRule>
    <fullName>Taboola_excluded</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(INCLUDES(Inclusion_List_GlobalList__c,&apos;Taboola&apos;)),NOT(ISBLANK( Taboola_Upload_Date__c )))</errorConditionFormula>
    <errorDisplayField>Adform_Upload_Date__c</errorDisplayField>
    <errorMessage>Adform is not in the Inclusion List.</errorMessage>
</ValidationRule>