Sandbox/02-12-2025/force-app/main/default/objects/Integration_Onboarding_Pipeline__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Data_Supplier_Account__c</columns>
    <columns>Ingestion_Onboarding_Type__c</columns>
    <columns>Data_Type__c</columns>
    <columns>Segment_Available_in_DSPs_DMPs__c</columns>
    <columns>Stage__c</columns>
    <columns>Data_Ops_Contact__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Data_Files_Saved_in_Google_Drive_Folder__c</columns>
    <columns>Taxonomy_Uploaded__c</columns>
    <columns>GDPR_Compliance_Verified__c</columns>
    <columns>Data_File_Checked_and_Verified__c</columns>
    <columns>Taxonomy_Checked_and_Verified__c</columns>
    <columns>All_changed_done_in_UI__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Integration_Onboarding_Pipeline__c.General_Onboarding_Integration</value>
    </filters>
    <label>All</label>
</ListView>